--- a/android/src/main/res/layout/view_video.xml
+++ b/android/src/main/res/layout/view_video.xml
@@ -16,12 +16,13 @@
             android:id="@+id/subscriber_container"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:padding="2dp"/>
+            android:padding="2dp"
+            android:layout_marginTop="56dp"/>
 
         <FrameLayout
             android:id="@+id/publisher_container"
-            android:layout_width="132dp"
-            android:layout_height="174dp"
+            android:layout_width="120dp"
+            android:layout_height="148dp"
             android:layout_gravity="bottom|end"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="24dp"
